--- a/package.json
+++ b/package.json
@@ -178,6 +178,7 @@
     }
   ],
   "dependencies": {
+    "@joplin/turndown-plugin-gfm": "^1.0.64",
     "@raycast/api": "^1.100.3",
     "turndown": "^7.2.0"
   },
